<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bahaaelramlawi.navig.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.bahaaelramlawi.navig.fragments.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_movie"
        android:name="com.bahaaelramlawi.navig.fragments.TicketBookingFragment"
        android:label="@string/menu_movie"
        tools:layout="@layout/fragment_ticket_booking_movie" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.bahaaelramlawi.navig.fragments.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.bahaaelramlawi.navig.fragments.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>